<resources>
    <string name="p2pkit_api_key" translatable="false">16321ccfa0254c2b87d5f2673f386eee</string>
    <string name="facebook_app_id" translatable="false">1753678397982220</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1753678397982220</string>
    <string name="loginFacebookButton">Facebook</string>
    <string name="logoutFacebookButton">Log out</string>
    <string name="app_name">Tendy</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="discovery">Discovery</string>
    <string name="slide1title">A​ ​new​ ​way​ ​of​ ​saying​ ​\'Hi!\'</string>
    <string name="slide1text">Let Tendy scan your surrounding to find interesting people around you. Browse by age, profession, hobbies and more</string>
    <string name="slide2title">You​ ​choose​ ​what​ ​to​ ​share</string>
    <string name="slide2text">Decide what information your profile will show at any given time. With Tendy, your profile can be as dynamic as you</string>
    <string name="slide3title">Stay​ ​in​ ​touch</string>
    <string name="slide3text">The people you meet with Tendy can become your long-time companions. Chat together from everywhere, at any time.</string>
    <string name="gotIt">Got It</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="loginBtn">login</string>
    <string name="registerBtn">register</string>
    <string name="dont_have_account">don\'t have an account? register!</string>
    <string name="have_account">have an account? sign in!</string>
    <string name="cant_use_facebook_already_has_user">You already have a user with us, and it\'s not connected through facebook. try connecting with your phone number.</string>
    <string name="save">Save</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="username">Nick name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="profession">Profession</string>
    <string name="something">Something about me</string>
    <string name="male">man</string>
    <string name="female">woman</string>
    <string name="select_image">Select Image</string>
    <string name="missing_fields">Missing fields</string>
    <string name="cant_without_username">Can\'t have a profile without a nick name</string>
    <string name="cant_without_name">Can\'t have a profile without a name and a birthday date</string>
    <string name="loading">Loading..</string>
    <string name="please_wait">please wait</string>
    <string name="issue">Issue</string>
    <string name="cant_image_right_now">We couldn\'t save the image right now.. try again later</string>
    <string name="go">go</string>
    <string name="successfully_enrolled">You\'ve successfully signed in! Create/edit your first public profile. Your public profile is how other Tendy users see you.</string>
    <string name="no_profile_yet_title">john \'no profile yet\' doe</string>
    <string name="no_profile_yet_subtitle1">man | 25 | doctor</string>
    <string name="no_profile_yet_subtitle2">i like life and life likes me</string>
    <string name="no_profile_yet_date" translatable="false">25/03/17</string>
    <string name="log_out">log out</string>
    <string name="successfulSave">Saved successfully!</string>
    <string name="problem">Problem</string>
    <string name="bluetooth_warning">You want be able to discover other people if you don\'t turn on your Bluetooth</string>
    <string name="username_taken">There was a problem with your registration, the username might be taken.</string>
    <string name="no_bluetooth">Your device doesn\'t seem to support Bluetooth. You can\'t use Tendy without it.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="write_valid_email">Write a valid email under \'Email\'</string>
    <string name="no_password">A password must be at least 6 characters long</string>
    <string name="passwords_dont_match">Your passwords don\'t match</string>
    <string name="success">Success!</string>
    <string name="email_sent">An email has been sent to you</string>
    <string name="login_failed">login has failed! check your email and password and try again. If you\'ve already signed up with Facebook, login again with Facebook</string>
    <string name="no_such_user">No such email exists in our records</string>
    <string name="inviteTitle">Chat invite</string>
    <string name="inviteText">Would you like to chat with %1$s?</string>
    <string name="inviteYes">Ok</string>
    <string name="inviteNo">Don\'t</string>
    <string name="no_internet">You\'re not connected to the internet. You can\'t proceed without an internet connection</string>
    <string name="image_transition_name" translatable="false">image</string>
    <string name="header_transition_name" translatable="false">header</string>
    <string name="just_sent_image">%1$s has just %2$s you an image!</string>
    <string name="already_invited_title">already invited</string>
    <string name="already_invited_text">there is already a standing chat invitation between you and %1$s</string>
    <string name="successfully_enrolled_facebook">You\'ve successfully signed in with Facebook! if you haven\'t already, create your first public profile</string>
    <string name="confirm">ok</string>
    <string name="wants_to_chat">%1$s %2$s to chat with you</string>
    <string name="wants_male">wants</string>
    <string name="wants_female">wants</string>
    <string name="stay_in_touch">%1$s minutes left. ask to stay in touch.</string>
    <string name="block">Block</string>
    <string name="warning">Warning</string>
    <string name="sure_you_want_to_delete">You\'re about to block %1$s. You won\'t be able to return to this chat. sure you want to continue?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="requestFriendshipTitle">A request to stay in touch</string>
    <string name="requestFriendshipText">You\'re about to send a \'stay in touch\' request to %1$s. If both of you request to stay in touch with each other, the timer will stop and you can chat forever. send a request?</string>
    <string name="delete">Delete</string>
    <string name="sure_you_want_to_delete_delete">You\'re about to delete this chat. sure you want to continue?</string>
    <string name="sure_you_want_to_delete_message">Delete the message?</string>
    <string name="request">Request</string>
    <string name="request_notifications">We\'d like to send you notifications when you\'re near other Tendy users. We\'d like you to allow us access to notification policy.</string>
    <string name="maleSent">sent</string>
    <string name="femaleSent">sent</string>
    <string name="fb_photo" translatable="false">http://graph.facebook.com/%1$s/picture?type=normal</string>
    <string name="share_real_identity">Share real details</string>
    <string name="invites_you_to_chat">wants to talk to you</string>
    <string name="waiting_for_invitation">Invited. waiting for reply.</string>
    <string name="write_a_msg">Write a message</string>
    <string name="time_over_title">Time over!</string>
    <string name="time_over_text">Your time for staying in touch is over. This chat will be deleted.</string>
    <string name="cant_go_on_without_permission">We can\'t go on without this permission</string>
    <string name="tendi_found_1_s_people_around_you">Tendy found %1$s people around you</string>
    <string name="cant_until_accepted_invitation">You can\'t do that until the invitation has been accepted.</string>
    <string name="show_my_profile">My current profile</string>
    <string name="hasAskedToStayInTouch">has asked to stay in touch</string>
    <string name="sure_you_want_to_logout">Sure you want to log out?</string>
    <string name="name">Name</string>
    <string name="gotta_have_a_name">You have to fill the \'name\' field</string>
    <string name="account_settings">Account settings</string>
    <string name="dont_have_real_profile">You didn\'t save a real profile (in the side menu)</string>
    <string name="real_profile_shared">Real profile shared</string>
    <string name="fill_profile_first">fill in your public profile before you go the the chats and discovery screens.</string>
    <string name="nickname">Nickname:</string>
    <string name="temp_problem">We\'re having a temporary issue with doing what you\'ve asked.. try again later.</string>
    <string name="stay_in_touch_asked">%1$s minutes left. approve stay in touch request.</string>
    <string name="real_profile">Real profile</string>
    <string name="wants_to_stay_in_touch">%1$s wants to stay in touch</string>
    <string name="deleted_message">This message was deleted by you</string>
    <string name="cant_share_real_before_writing_a_message">You can\'t share you real profile before you write you\'re first message to your chat buddy</string>
    <string name="searching_for_web_title">Trying to connect..</string>
    <string name="cant_block_before_inviting">You can\'t block someone before you\'ve invited them..</string>
    <string name="youve_been_blocked">The chat has been blocked by one of the sides.. we\'ll now move out of the chat screen</string>
    <string name="connect_with_your_phone_number">Phone number</string>
    <string name="or">Or</string>
    <string name="phoneNumber">Enter your phone number</string>
    <string name="phoneVirification">Phone Verification</string>
    <string name="verify">Verify</string>
    <string name="not_valid_phone">This is not a valid phone number</string>
    <string name="can_resend_code_in">Didn\'t get a code? ask again in %1$s seconds..</string>
    <string name="click_on_this_button_to_get_a_verification_code">click on this button to get a verification code</string>
    <string name="wait_for_the_counter_to_zero_out">You can only get a code once every 60 seconds..</string>
    <string name="code_sent_title">Code sent!</string>
    <string name="code_sent_text">A code has been sent to your number via SMS. enter that code in the below textbox</string>
    <string name="code">Enter code here</string>
    <string name="wrong_code">You\'ve entered the wrong code..</string>
    <string name="real_details_title">Share Real Details</string>
    <string name="real_details_text">Once you share your real details you can\'t go back, this chat partner will always see your real profile. sure you want to share it?</string>
    <string name="cant_leave_before_saving">You can\'t go on without saving your real profile. we will not show this information to anyone unless you specifically instruct us to.</string>
    <string name="other">other</string>
    <string name="birthday">Birthday date</string>
    <string name="ok">ok</string>
    <string name="done">done</string>
    <string name="welcome">Get​ ​Started​ ​in​ ​seconds. What are you waiting for? Sign up now and start meeting interesting people around you.</string>
    <string name="connect">Connect via</string>
    <string name="phoneVirificationDescription">Tendy will send an SMS message to verify your phone number. Enter your 10 digit phone number:</string>
    <string name="sendMessage">Send message</string>
    <string name="you_can_t_edit_this_data_anymore_if_you_feel_loke_you_have_to_contact_our_support">You can\'t edit some of this data anymore. if you feel like you have to, contact our support (side menu).</string>
    <string name="discoveryState">Discovery state</string>
    <string name="discoveryStateOn">On</string>
    <string name="discoveryStateOff">Off</string>
    <string name="discoveryStateCounter">Available in %1$s</string>
    <string name="termsandconditions">terms and conditions</string>
</resources>